--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
 <head>
 
 <title>C81</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="C81style.css">
 </head>
 <body class="body_backgorund">
 
 <center>
-	<h1>My First Canvas</h1>
+	<h1 class="text-primary">My First Canvas</h1>
 	<canvas id="myCanvas" width= "800" height= "500">
 
 	</canvas>
 	<br>
 	<span>Colour: </span> 
 	<input placeholder= "Enter the colour here..." type= "text" id="colour_input">
-	<br>
-	<button id="clear_button" onclick="clearCanvas();"> Clear </button>
+	<span>Width of line: </span>
+	<input placeholder="Enter the line width here..." type="text" id="width_input">
+	<span>
+		<button class="btn btn-primary" id="clear_button" onclick="clearCanvas();"> Clear </button>
+	</span>
+	
 </center>
 
 
