--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="C81style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="body_backgorund">
 
@@ -22,13 +22,12 @@
 	<input placeholder= "Enter the colour here..." type= "text" id="colour_input">
 	<span>Width of line: </span>
 	<input placeholder="Enter the line width here..." type="text" id="width_input">
-	<span>
-		<button class="btn btn-primary" id="clear_button" onclick="clearCanvas();"> Clear </button>
-	</span>
+	
+		
 	
 </center>
 
 
-<script src="C81main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
